<resources>

    //app name
    <string name="app_name">Genshin</string>

    //navigation menu items
    <string name="navigation_item_heroes">Персонажи</string>
    <string name="weapon">Оружие</string>
    <string name="navigation_item_main">Главная</string>
    <string name="artifacts">Артефакты</string>
    <string name="navigation_item_map">Карта</string>
    <string name="hint_search_hero">Поиск</string>
    <string name="hero_setting">Настройки персонажа</string>
    <!-- Preference Titles -->
    <string name="hero_priority">Приоритеты персонажа</string>
    <string name="elevation_priority">Приоритет возвышения</string>
    <string name="talent_priority">Приоритет талантов</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today">Сегодня</string>
    <string name="artifact_priority">Приоритет артефактов</string>
    <string name="elevation_materials">• Материалы возвышения</string>
    <string name="materials_for_talents">• Материалы для талантов</string>
    <string name="farm_of_artifacts">• Фарм артефактов</string>
    <string name="skills">Таланты</string>
    <string name="constellations">Созвездия</string>
    <string name="groups">Группы</string>
    <string name="name"><b>Имя:</b></string>
    <string name="birthday"><b>День рождения:</b></string>
    <string name="element"><b>Элемент:</b></string>
    <string name="region"><b>Регион:</b></string>
    <string name="no_goals_added">Цели не добавлены!</string>
    <string name="view_goals">Посмотреть цели</string>
</resources>