<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.hero_settings.HeroSettingsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hero_priority"
        android:layout_margin="@dimen/margin_medium"
        android:textSize="@dimen/text_size_18"
        android:textColor="?attr/colorOnPrimary"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchElevationPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/elevation_priority"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:textSize="@dimen/text_small"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchTalentPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/talent_priority"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:textSize="@dimen/text_small"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchArtifactPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/artifact_priority"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:textSize="@dimen/text_small"/>

</LinearLayout>